--- a/src/pages/tracker-capture/tracker-entry-dashboard/tracker-entry-dashboard.scss
+++ b/src/pages/tracker-capture/tracker-entry-dashboard/tracker-entry-dashboard.scss
@@ -1,3 +1,11 @@
 page-tracker-entry-dashboard {
+  .item-md.item-block .item-inner {
+    padding-right: 5px;
+    border-bottom: 0px solid #E6E6E7;
+  }
 
+  .item-ios.item-block .item-inner {
+    padding-right: 5px;
+    border-bottom: 0px solid #E6E6E7;
+  }
 }
