feat: tracker based event rendering
Adding support of non repeatable tracker event based rendering

--- a/src/pages/tracker-capture/components/enrollment-form/enrollment-form.html
+++ b/src/pages/tracker-capture/components/enrollment-form/enrollment-form.html
@@ -26,7 +26,7 @@
   <div class="item-card">
     <div class="inputLabel">
       <b>
-        <div class="inputLabel">
+        <div class="inputLabel" padding>
           <span [translate]="'Enrollments'"></span>
         </div>
       </b>
