--- a/src/pages/tracker-capture/components/profile-form/profile-form.html
+++ b/src/pages/tracker-capture/components/profile-form/profile-form.html
@@ -50,7 +50,7 @@
   <div class="item-card">
     <div class="inputLabel">
       <b>
-        <div class="inputLabel">
+        <div class="inputLabel" padding>
           <span [translate]="'Profile'"></span>
         </div>
       </b>
