--- a/src/pages/tracker-capture/components/program-stage-tracker-based/program-stage-tracker-based.html
+++ b/src/pages/tracker-capture/components/program-stage-tracker-based/program-stage-tracker-based.html
@@ -27,7 +27,34 @@
 </div>
 <div *ngIf="!isLoading" class="over-flow-container">
   <div *ngIf="tableLayout && tableLayout.headers && tableLayout.headers.length > 0">
-
+    <table class="table table-bordered" width="100%">
+      <thead *ngIf="tableLayout && tableLayout.headers">
+        <tr>
+          <th *ngFor="let header of tableLayout.headers;trackBy: trackByFn">{{ header}}</th>
+        </tr>
+      </thead>
+      <tbody *ngFor="let row of tableLayout.rows;let currentIndex = index;trackBy: trackByFn">
+        <tr
+          [ngStyle]="{'background-color': currentEvents[currentIndex].id === currentOpenEvent.id ? '#B9FFB9' :'#F4F4F4' }"
+          (click)="activateRowProgramStageDataEntry(currentIndex)">
+          <td *ngFor="let data of row;trackBy: trackByFn">
+            {{ data }}
+          </td>
+        </tr>
+        <tr *ngIf="currentEvents[currentIndex].id === currentOpenEvent.id">
+          <td colspan="100%">
+            <div text-left>
+              <tracker-event-container [formLayout]="formLayout" [(dataObject)]="dataObject"
+                [programSkipLogicMetadata]="programSkipLogicMetadata"
+                [dataValuesSavingStatusClass]="dataValuesSavingStatusClass" [programStage]="programStage"
+                [(currentOpenEvent)]="currentOpenEvent" [currentUser]="currentUser">
+              </tracker-event-container>
+              <tracker-event-action [isAddButtonDisabled]="isAddButtonDisabled"
+                [isRepeatableStage]="programStage.repeatable" [isDeletable]="couldEventBeDeleted()">
+              </tracker-event-action>
+            </div>
+        </tr>
+    </table>
   </div>
   <div *ngIf="isNewEventFormOpened || currentEvents.length === 0">
     <tracker-event-container [formLayout]="formLayout" [(dataObject)]="dataObject"
