feat: Deletion status and add or edit tracker event
Adding support of add new event or edit exist tracker based events as well as update deletion status

--- a/src/pages/tracker-capture/components/program-stage-tracker-based/program-stage-tracker-based.html
+++ b/src/pages/tracker-capture/components/program-stage-tracker-based/program-stage-tracker-based.html
@@ -44,24 +44,28 @@
         <tr *ngIf="currentEvents[currentIndex].id === currentOpenEvent.id">
           <td colspan="100%">
             <div text-left>
-              <tracker-event-container [formLayout]="formLayout" [(dataObject)]="dataObject"
-                [programSkipLogicMetadata]="programSkipLogicMetadata"
+              <tracker-event-container (updateDeleteStatus)="onUpdateDeleteStatus($event)"
+                (deleteEvent)="onDeleteEvent($event)" [(isDeletable)]="isDeletable" [formLayout]="formLayout"
+                [(dataObject)]="dataObject" [programSkipLogicMetadata]="programSkipLogicMetadata"
                 [dataValuesSavingStatusClass]="dataValuesSavingStatusClass" [programStage]="programStage"
                 [(currentOpenEvent)]="currentOpenEvent" [currentUser]="currentUser">
               </tracker-event-container>
-              <tracker-event-action [isAddButtonDisabled]="isAddButtonDisabled"
-                [isRepeatableStage]="programStage.repeatable" [isDeletable]="couldEventBeDeleted()">
+              <tracker-event-action (deleteEvent)="onDeleteEvent($event)"
+                (addRepeatableEvent)="onAddRepeatableEvent($event)" [isAddButtonDisabled]="isAddButtonDisabled"
+                [isRepeatableStage]="programStage.repeatable" [isDeletable]="isDeletable">
               </tracker-event-action>
             </div>
         </tr>
     </table>
   </div>
   <div *ngIf="isNewEventFormOpened || currentEvents.length === 0">
-    <tracker-event-container [formLayout]="formLayout" [(dataObject)]="dataObject"
+    <tracker-event-container (updateDeleteStatus)="onUpdateDeleteStatus($event)" (deleteEvent)="onDeleteEvent($event)"
+      [(isDeletable)]="isDeletable" [formLayout]="formLayout" [(dataObject)]="dataObject"
       [programSkipLogicMetadata]="programSkipLogicMetadata" [dataValuesSavingStatusClass]="dataValuesSavingStatusClass"
       [programStage]="programStage" [(currentOpenEvent)]="currentOpenEvent" [currentUser]="currentUser">
     </tracker-event-container>
-    <tracker-event-action [isAddButtonDisabled]="isAddButtonDisabled" [isRepeatableStage]="programStage.repeatable"
-      [isDeletable]="couldEventBeDeleted()"></tracker-event-action>
+    <tracker-event-action (deleteEvent)="onDeleteEvent($event)" (addRepeatableEvent)="onAddRepeatableEvent($event)"
+      [isAddButtonDisabled]="isAddButtonDisabled" [isRepeatableStage]="programStage.repeatable"
+      [isDeletable]="isDeletable"></tracker-event-action>
   </div>
 </div>
