--- a/src/pages/sync/components/upload-data-via-internet/upload-via-internet.html
+++ b/src/pages/sync/components/upload-data-via-internet/upload-via-internet.html
@@ -31,35 +31,54 @@
     <ion-col *ngIf="!showLoadingMessage">
       <ion-item>
         <ion-label>
-          {{ translationMapper['Aggregate data'] }}&nbsp;
+          <span [translate]="'Aggregate data'"></span>
+          &nbsp;
           <ion-badge [color]="colorSettings.colorAttributes.secondary">{{ dataObject.dataValues.length }}</ion-badge>
         </ion-label>
-        <ion-checkbox [color]="colorSettings.colorAttributes.secondary" [(ngModel)]="selectedItems.dataValues" disabled="{{(dataObject.dataValues.length == 0)?'true':'false'}}"
-          (ionChange)="updateItemsToUpload()"></ion-checkbox>
+        <ion-checkbox [color]="colorSettings.colorAttributes.secondary" [(ngModel)]="selectedItems.dataValues"
+          disabled="{{(dataObject.dataValues.length == 0)?'true':'false'}}" (ionChange)="updateItemsToUpload()">
+        </ion-checkbox>
       </ion-item>
       <ion-item>
         <ion-label>
-          {{ translationMapper['Events'] }}&nbsp;
+          <span [translate]="'Events'"></span>
+          &nbsp;
           <ion-badge [color]="colorSettings.colorAttributes.secondary">{{ dataObject.events.length }}</ion-badge>
         </ion-label>
-        <ion-checkbox [color]="colorSettings.colorAttributes.secondary" [(ngModel)]="selectedItems.events" disabled="{{(dataObject.events.length == 0)?'true':'false'}}"
-          (ionChange)="updateItemsToUpload()"></ion-checkbox>
+        <ion-checkbox [color]="colorSettings.colorAttributes.secondary" [(ngModel)]="selectedItems.events"
+          disabled="{{(dataObject.events.length == 0)?'true':'false'}}" (ionChange)="updateItemsToUpload()">
+        </ion-checkbox>
       </ion-item>
       <ion-item>
         <ion-label>
-          {{ translationMapper['Events for tracker'] }}&nbsp;
-          <ion-badge [color]="colorSettings.colorAttributes.secondary">{{ dataObject.eventsForTracker.length }}</ion-badge>
+          <span [translate]="'Events for tracker'"></span>
+          &nbsp;
+          <ion-badge [color]="colorSettings.colorAttributes.secondary">{{ dataObject.eventsForTracker.length }}
+          </ion-badge>
         </ion-label>
         <ion-checkbox [color]="colorSettings.colorAttributes.secondary" [(ngModel)]="selectedItems.eventsForTracker"
-          disabled="{{(dataObject.eventsForTracker.length == 0)?'true':'false'}}" (ionChange)="updateItemsToUpload()"></ion-checkbox>
+          disabled="{{(dataObject.eventsForTracker.length == 0)?'true':'false'}}" (ionChange)="updateItemsToUpload()">
+        </ion-checkbox>
       </ion-item>
       <ion-item>
         <ion-label>
-          {{ translationMapper['Enrollments'] }}&nbsp;
+          <span [translate]="'Enrollments'"></span>
+          &nbsp;
           <ion-badge [color]="colorSettings.colorAttributes.secondary">{{ dataObject.Enrollments.length }}</ion-badge>
         </ion-label>
         <ion-checkbox [color]="colorSettings.colorAttributes.secondary" [(ngModel)]="selectedItems.Enrollments"
-          disabled="{{(dataObject.Enrollments.length == 0)?'true':'false'}}" (ionChange)="updateItemsToUpload()"></ion-checkbox>
+          disabled="{{(dataObject.Enrollments.length == 0)?'true':'false'}}" (ionChange)="updateItemsToUpload()">
+        </ion-checkbox>
+      </ion-item>
+      <ion-item>
+        <ion-label>
+          <span [translate]="'dataStore'"></span>
+          &nbsp;
+          <ion-badge [color]="colorSettings.colorAttributes.secondary">{{ dataObject.dataStore.length }}</ion-badge>
+        </ion-label>
+        <ion-checkbox [color]="colorSettings.colorAttributes.secondary" [(ngModel)]="selectedItems.dataStore"
+          disabled="{{(dataObject.dataStore.length == 0)?'true':'false'}}" (ionChange)="updateItemsToUpload()">
+        </ion-checkbox>
       </ion-item>
       <button [color]="colorSettings.colorAttributes.secondary" [disabled]="itemsToUpload.length == 0" ion-button full
         text-capitalize (tap)="uploadData()">
