--- a/src/pages/data-entry/components/custom-data-entry-form/custom-data-entry-form.html
+++ b/src/pages/data-entry/components/custom-data-entry-form/custom-data-entry-form.html
@@ -28,24 +28,38 @@
 <div *ngIf="!dataSetReportAggregateValues">
   <div *ngIf="entryFormType && entryFormType === 'aggregate'">
     <ion-row>
-      <ion-col col-6 col-sm-6>
-        <button color="favorite" round ion-button full [disabled]="isDataSetCompletenessProcessRunning || isDataSetCompleted || isPeriodLocked"
-          (tap)="updateDataSetCompleteness()">
-          <span *ngIf="!isDataSetCompletenessProcessRunning" [translate]="'Complete'"></span>
-          <span *ngIf="isDataSetCompletenessProcessRunning && !isDataSetCompleted" [translate]="'Completing'"></span>
-        </button>
-      </ion-col>
-      <ion-col col-6 col-sm-6>
-        <button color="danger" round ion-button full [disabled]="isDataSetCompletenessProcessRunning || !isDataSetCompleted || isPeriodLocked"
-          (tap)="updateDataSetCompleteness()">
-          <span *ngIf="!isDataSetCompletenessProcessRunning" [translate]="'Undo complete'"></span>
-          <span *ngIf="isDataSetCompletenessProcessRunning && isDataSetCompleted" [translate]="'Undo completing'"></span>
-        </button>
+      <ion-col>
+        <div class="flex-container-start">
+          <div class="flex-item flex-item-start">
+            <button color="favorite" ion-button class="pagination-button"
+              [disabled]="isDataSetCompleted || isDataSetCompletenessProcessRunning || isPeriodLocked || isValidationProcessRunning"
+              (tap)="updateDataSetCompleteness()">
+              <span
+                [translate]="isDataSetCompletenessProcessRunning && !isDataSetCompleted? 'Completing' : 'Complete'"></span>
+            </button>
+          </div>
+          <div class="flex-item flex-item-start">
+            <button color="danger" ion-button class="pagination-button"
+              [disabled]="!isDataSetCompleted || isDataSetCompletenessProcessRunning || isPeriodLocked || isValidationProcessRunning"
+              (tap)="updateDataSetCompleteness()">
+              <span
+                [translate]="isDataSetCompletenessProcessRunning && isDataSetCompleted? 'Undo completing' : 'Undo complete'"></span>
+            </button>
+          </div>
+          <div class="flex-item flex-item-start">
+            <button color="light" ion-button class="pagination-button"
+              [disabled]="isDataSetCompletenessProcessRunning || isPeriodLocked || isValidationProcessRunning"
+              (tap)="onValidatingDateEntry()">
+              <span [translate]="isValidationProcessRunning ? 'Validating' : 'Validate'"></span>
+            </button>
+          </div>
+        </div>
       </ion-col>
     </ion-row>
     <div *ngIf="!isDataSetCompletenessProcessRunning">
       <div *ngIf="dataSetsCompletenessInfo && dataSetsCompletenessInfo.complete">
-        <div class="item-card animated fadeIn" padding-bottom padding-top (click)="viewUserCompletenessInformation(dataSetsCompletenessInfo)">
+        <div class="item-card animated fadeIn" padding-bottom padding-top
+          (click)="viewUserCompletenessInformation(dataSetsCompletenessInfo)">
           <span [translate]="'Completed by'"></span>
           <b>{{ dataSetsCompletenessInfo.storedBy }}</b> {{ 'on' | translate }}
           <b>{{ dataSetsCompletenessInfo.date }}</b>
