--- a/src/pages/data-entry/components/data-entry-pagination/data-entry-pagination.html
+++ b/src/pages/data-entry/components/data-entry-pagination/data-entry-pagination.html
@@ -24,49 +24,75 @@
 -->
 <div class="item-card">
   <ion-row *ngIf="entryFormSectionsCount > 1 && entryFormType && entryFormType != 'CUSTOM'">
-    <ion-col col-2 col-sm-1 (click)="changePagination(pager.page - 1)" padding-left padding-bottom padding-top>
-      <ion-icon name="ios-arrow-back-outline"></ion-icon>
-    </ion-col>
-    <ion-col col-3 col-sm-2 padding-bottom padding-top>
-      <div (tap)="openSectionList()">
-        {{ pager.page + ' / ' + pager.total }}
+    <ion-col>
+      <div class="flex-container">
+        <div class="flex-item paginations">
+          <span (click)="changePagination(pager.page - 1)" padding>
+            <ion-icon name="ios-arrow-back-outline"></ion-icon>
+          </span>
+          <span (tap)="openSectionList()">
+            {{ pager.page + ' / ' + pager.total }}
+          </span>
+          <span (click)="changePagination(pager.page  + 1)" padding>
+            <ion-icon name="ios-arrow-forward-outline"></ion-icon>
+          </span>
+        </div>
+        <div class="flex-item">
+          <div *ngIf="!isDataSetCompleted">
+            <button color="favorite" ion-button class="pagination-button" padding
+              [disabled]="isDataSetCompletenessProcessRunning || isPeriodLocked || isValidationProcessRunning"
+              (tap)="updateDataSetCompleteness()">
+              <span
+                [translate]="isDataSetCompletenessProcessRunning && !isDataSetCompleted? 'Completing' : 'Complete'"></span>
+            </button>
+          </div>
+          <div *ngIf="isDataSetCompleted">
+            <button color="danger" ion-button class="pagination-button" padding
+              [disabled]="isDataSetCompletenessProcessRunning || isPeriodLocked || isValidationProcessRunning"
+              (tap)="updateDataSetCompleteness()">
+              <span
+                [translate]="isDataSetCompletenessProcessRunning && isDataSetCompleted? 'Undo completing' : 'Undo complete'"></span>
+            </button>
+          </div>
+        </div>
+        <div class="flex-item">
+          <button color="light" ion-button class="pagination-button" padding
+            [disabled]="isDataSetCompletenessProcessRunning || isPeriodLocked || isValidationProcessRunning"
+            (tap)="onValidatingDateEntry()">
+            <span [translate]="isValidationProcessRunning ? 'Validating' : 'Validate'"></span>
+          </button>
+        </div>
       </div>
-    </ion-col>
-    <ion-col col-2 col-sm-1 (click)="changePagination(pager.page  + 1)" padding-bottom padding-top>
-      <ion-icon name="ios-arrow-forward-outline"></ion-icon>
-    </ion-col>
-    <ion-col col-5 col-sm-8 *ngIf="!isDataSetCompleted">
-      <button color="favorite" round ion-button full [disabled]="isDataSetCompletenessProcessRunning || isPeriodLocked"
-        (tap)="updateDataSetCompleteness()">
-        <span *ngIf="!isDataSetCompletenessProcessRunning" [translate]="'Complete'"></span>
-        <span *ngIf="isDataSetCompletenessProcessRunning && !isDataSetCompleted" [translate]="'Completing'"></span>
-      </button>
-    </ion-col>
-    <ion-col col-5 col-sm-8 *ngIf="isDataSetCompleted">
-      <button color="danger" round ion-button full [disabled]="isDataSetCompletenessProcessRunning || isPeriodLocked"
-        (tap)="updateDataSetCompleteness()">
-        <span *ngIf="!isDataSetCompletenessProcessRunning" [translate]="'Undo complete'"></span>
-        <span *ngIf="isDataSetCompletenessProcessRunning && isDataSetCompleted" [translate]="'Undo completing'"></span>
-      </button>
     </ion-col>
   </ion-row>
 
   <ion-row *ngIf="entryFormSectionsCount == 1">
-    <ion-col col-6 col-sm-6>
-      <button color="favorite" round ion-button full
-        [disabled]="isDataSetCompletenessProcessRunning || isDataSetCompleted|| isPeriodLocked"
-        (tap)="updateDataSetCompleteness()">
-        <span *ngIf="!isDataSetCompletenessProcessRunning" [translate]="'Complete'"></span>
-        <span *ngIf="isDataSetCompletenessProcessRunning && !isDataSetCompleted" [translate]="'Completing'"></span>
-      </button>
-    </ion-col>
-    <ion-col col-6 col-sm-6>
-      <button color="danger" round ion-button full
-        [disabled]="isDataSetCompletenessProcessRunning || !isDataSetCompleted|| isPeriodLocked"
-        (tap)="updateDataSetCompleteness()">
-        <span *ngIf="!isDataSetCompletenessProcessRunning" [translate]="'Undo complete'"></span>
-        <span *ngIf="isDataSetCompletenessProcessRunning && isDataSetCompleted" [translate]="'Undo completing'"></span>
-      </button>
+    <ion-col>
+      <div class="flex-container-start">
+        <div class="flex-item flex-item-start">
+          <button color="favorite" ion-button class="pagination-button"
+            [disabled]="isDataSetCompleted || isDataSetCompletenessProcessRunning || isPeriodLocked || isValidationProcessRunning"
+            (tap)="updateDataSetCompleteness()">
+            <span
+              [translate]="isDataSetCompletenessProcessRunning && !isDataSetCompleted? 'Completing' : 'Complete'"></span>
+          </button>
+        </div>
+        <div class="flex-item flex-item-start">
+          <button color="danger" ion-button class="pagination-button"
+            [disabled]="!isDataSetCompleted || isDataSetCompletenessProcessRunning || isPeriodLocked || isValidationProcessRunning"
+            (tap)="updateDataSetCompleteness()">
+            <span
+              [translate]="isDataSetCompletenessProcessRunning && isDataSetCompleted? 'Undo completing' : 'Undo complete'"></span>
+          </button>
+        </div>
+        <div class="flex-item flex-item-start">
+          <button color="light" ion-button class="pagination-button"
+            [disabled]="isDataSetCompletenessProcessRunning || isPeriodLocked || isValidationProcessRunning"
+            (tap)="onValidatingDateEntry()">
+            <span [translate]="isValidationProcessRunning ? 'Validating' : 'Validate'"></span>
+          </button>
+        </div>
+      </div>
     </ion-col>
   </ion-row>
   <div *ngIf="
