feat(Password input): Support of update values behavior on input
Adding support of either update value on blur input or change value

--- a/src/components/password-input/password-input.html
+++ b/src/components/password-input/password-input.html
@@ -24,7 +24,13 @@
 -->
 <ion-row>
   <ion-col>
-    <div>
+    <div *ngIf="updateOnChangeValue">
+      <ion-item no-lines>
+        <ion-input [readonly]="lockingFieldStatus" type="password" placeholder="{{placeholder|translate}}"
+          (ionChange)="updateValues()" [(ngModel)]="inputFieldValue"></ion-input>
+      </ion-item>
+    </div>
+    <div *ngIf="!updateOnChangeValue">
       <ion-item no-lines>
         <ion-input [readonly]="lockingFieldStatus" type="password" placeholder="{{placeholder|translate}}"
           (ionBlur)="updateValues()" [(ngModel)]="inputFieldValue"></ion-input>
