--- a/src/pages/login/components/login-form/login-form.html
+++ b/src/pages/login/components/login-form/login-form.html
@@ -23,19 +23,27 @@
 *
 -->
 <div *ngIf="loginFormFields && !isLoading">
-  <form>
+  <form (submit)="onStartLoginProcess()">
     <div *ngFor="let field of loginFormFields;trackBy: trackByFn">
       <div class="input-field-container">
         <div *ngIf="field.type === 'TEXT'">
           <text-input-field [dataElementId]="field.id" [readonly]="field.readonly" [data]="data"
             [categoryOptionComboId]="'login'" (onChange)="updateValue($event)" [placeholder]="field.placehoder"
-            [valueType]="field.type" [barcodeSettings]="field.barcodeSettings"></text-input-field>
+            [valueType]="field.type" [barcodeSettings]="field.barcodeSettings"
+            [updateOnChangeValue]='updateOnChangeValue'></text-input-field>
         </div>
         <div *ngIf="field.type === 'PASSWORD'">
-          <password-input [dataElementId]="field.id" [data]="data" [categoryOptionComboId]="'login'" (onChange)="updateValue($event)"
-            [placeholder]="field.placehoder" [barcodeSettings]="field.barcodeSettings"></password-input>
+          <password-input [dataElementId]="field.id" [data]="data" [categoryOptionComboId]="'login'"
+            (onChange)="updateValue($event)" [updateOnChangeValue]='updateOnChangeValue'
+            [placeholder]="field.placehoder" [barcodeSettings]="field.barcodeSettings">
+          </password-input>
         </div>
       </div>
+    </div>
+    <div>
+      <button large type="submit" [disabled]="!isLoginFormValid" ion-button full text-capitalize [color]="buttonColor">
+        <span [translate]="'Login'"></span>
+      </button>
     </div>
   </form>
 </div>
