style: Improving styles for completenes buttons

--- a/src/pages/data-entry/components/custom-data-entry-form/custom-data-entry-form.html
+++ b/src/pages/data-entry/components/custom-data-entry-form/custom-data-entry-form.html
@@ -30,16 +30,16 @@
     <ion-row>
       <ion-col>
         <div class="flex-container-start">
-          <div class="flex-item flex-item-start">
-            <button color="favorite" ion-button class="pagination-button"
+          <div class="flex-item flex-item-start" *ngIf="!isDataSetCompleted">
+            <button color="favorite" padding-left padding-right ion-button class="pagination-button"
               [disabled]="isDataSetCompleted || isDataSetCompletenessProcessRunning || isPeriodLocked || isValidationProcessRunning"
               (tap)="updateDataSetCompleteness()">
               <span
                 [translate]="isDataSetCompletenessProcessRunning && !isDataSetCompleted? 'Completing' : 'Complete'"></span>
             </button>
           </div>
-          <div class="flex-item flex-item-start">
-            <button color="danger" ion-button class="pagination-button"
+          <div class="flex-item flex-item-start" *ngIf="isDataSetCompleted">
+            <button color="danger" ion-button padding-left padding-right class="pagination-button"
               [disabled]="!isDataSetCompleted || isDataSetCompletenessProcessRunning || isPeriodLocked || isValidationProcessRunning"
               (tap)="updateDataSetCompleteness()">
               <span
@@ -47,7 +47,7 @@
             </button>
           </div>
           <div class="flex-item flex-item-start">
-            <button color="light" ion-button class="pagination-button"
+            <button color="light" ion-button padding-left padding-right class="pagination-button"
               [disabled]="isDataSetCompletenessProcessRunning || isPeriodLocked || isValidationProcessRunning"
               (tap)="onValidatingDateEntry()">
               <span [translate]="isValidationProcessRunning ? 'Validating' : 'Validate'"></span>
