feat(App icons): Adding grid flex for app icons display

--- a/src/pages/apps/components/app-item/app-item.html
+++ b/src/pages/apps/components/app-item/app-item.html
@@ -22,9 +22,9 @@
 *
 *
 -->
-<div class="apps-contents" padding>
-  <ion-thumbnail>
-    <img class="menu-app-icon-list" [src]="appItem.src">
-  </ion-thumbnail>
-  <p class="menu-app" [translate]="appItem.name"></p>
+<div>
+  <div>
+    <img class="icon-item" [src]="appItem.src">
+  </div>
+  <p [translate]="appItem.name"></p>
 </div>
