--- a/src/pages/apps/components/app-item/app-item.scss
+++ b/src/pages/apps/components/app-item/app-item.scss
@@ -1,3 +1,8 @@
 app-item {
-
+  .icon-item {
+    // width: auto !important;
+    align-items: center;
+    min-width: 65px;
+    max-width: 67px;
+  }
 }
