--- a/src/pages/event-capture/components/event-completeness/event-completeness.scss
+++ b/src/pages/event-capture/components/event-completeness/event-completeness.scss
@@ -4,7 +4,8 @@ event-completeness {
         flex-wrap: wrap;
         justify-content: space-between;
     }
-    .paginations {
+    .paginations,
+    .complementenes-info {
         margin-top: 5px;
     }
     .pagination-button {
