feat: Support of change status of event on complete or uncomplete event

--- a/src/pages/event-capture/components/program-stage-event-based/program-stage-event-based.html
+++ b/src/pages/event-capture/components/program-stage-event-based/program-stage-event-based.html
@@ -57,11 +57,9 @@
                     </div>
 
                     <!-- completeness info-->
-                    <ion-row no-padding>
-                        <ion-col>
-                            <event-completeness (changeEventCompleteness)="onUpdatingEventCompleteness($event)" [complementenesInfo]="complementenesInfo" [isEventCompleted]="isEventCompleted" [isEventLocked]="isEventLocked" [isEventCompletenessProcessRunning]="isEventCompletenessProcessRunning"></event-completeness>
-                        </ion-col>
-                    </ion-row>
+                    <div>
+                        <event-completeness (changeEventCompleteness)="onUpdatingEventCompleteness($event)" [complementenesInfo]="complementenesInfo" [isEventCompleted]="isEventCompleted" [isEventLocked]="isEventLocked" [isEventCompletenessProcessRunning]="isEventCompletenessProcessRunning"></event-completeness>
+                    </div>
 
                     <ion-row no-padding>
                         <ion-col>
